add configuration handler: get namespace
