# src/models/responses.go
@@ -14,30 +14,29 @@ type ReactionsPOSTResponse200 struct {
 	Status string `json:"status"`
 }
 
-type ReactionsPOSTResponse403 struct {
-	Error string `json:"error"`
-}
-
 type ReactionsDELETEResponse200 struct {
 	Status string `json:"status"`
-}
-
-type ReactionsDELETEResponse403 struct {
-	Error string `json:"error"`
 }
 
 type ConfigurationPOSTResponse200 struct {
 	Status string `json:"status"`
 }
 
-type ConfigurationPOSTResponse422 struct {
-	Error string `json:"error"`
-}
-
 type AvailableReactionsGETResponse200 struct {
 	Reactions []Reaction `json:"reactions"`
 }
 
-type AvailableReactionsGETResponse404 struct {
+type NamespaceGETResponse200 struct {
+	Namespace Namespace `json:"namespace"`
+}
+
+type ReactionsPOSTResponse403 ErrorResponse
+type ReactionsDELETEResponse403 ErrorResponse
+type ConfigurationPOSTResponse415 ErrorResponse
+type ConfigurationPOSTResponse422 ErrorResponse
+type NamespaceGETResponse404 ErrorResponse
+type AvailableReactionsGETResponse404 ErrorResponse
+
+type ErrorResponse struct {
 	Error string `json:"error"`
 }
